k8dash/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: k8dash
  namespace: kube-system
  annotations:
    ingress.kubernetes.io/auth-type: "forward"
    ingress.kubernetes.io/auth-url: "https://auth.stoicatedy.ovh/api/verify?rd=https://auth.stoicatedy.ovh"
spec:
  rules:
    - host: k8dash.stoicatedy.ovh
      http:
        paths:
          - path: /
            backend:
              serviceName: k8dash
              servicePort: 80
