k8dash/k8dash.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: k8dash
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: k8dash
  template:
    metadata:
      labels:
        k8s-app: k8dash
    spec:
      containers:
        - name: k8dash
          image: herbrandson/k8dash:latest
          ports:
            - containerPort: 4654
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 4654
            initialDelaySeconds: 30
            timeoutSeconds: 30
          resources:
            limits:
              memory: "100Mi"
              cpu: "500m"

      nodeSelector:
        "beta.kubernetes.io/os": linux

---
kind: Service
apiVersion: v1
metadata:
  name: k8dash
  namespace: kube-system
spec:
  ports:
    - port: 80
      targetPort: 4654
  selector:
    k8s-app: k8dash

---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: k8dash
  namespace: kube-system
  annotations:
    ingress.kubernetes.io/auth-type: "forward"
    ingress.kubernetes.io/auth-url: "https://auth.stoicatedy.ovh/api/verify?rd=https://auth.stoicatedy.ovh"
spec:
  rules:
    - host: k8dash.stoicatedy.ovh
      http:
        paths:
          - path: /
            backend:
              serviceName: k8dash
              servicePort: 80
